[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/RobotoMono-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="UI" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/HBoxContainer"]
margin_left = 92.0
margin_top = 14.0
margin_right = 192.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Algorithm:"

[node name="AlgorithmChoiche" type="OptionButton" parent="ColorRect/HBoxContainer"]
margin_left = 202.0
margin_top = 11.0
margin_right = 251.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "--"

[node name="GenerateBtn" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 261.0
margin_top = 11.0
margin_right = 353.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "Generate"

[node name="ResetBtn" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 363.0
margin_top = 11.0
margin_right = 425.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "Reset"

[node name="ExportBtn" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 435.0
margin_top = 11.0
margin_right = 507.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "Export"

[connection signal="pressed" from="ColorRect/HBoxContainer/GenerateBtn" to="." method="_on_GenerateBtn_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/ResetBtn" to="." method="_on_ResetBtn_pressed"]
